[gd_scene load_steps=4 format=3 uid="uid://blvm23rqsmhhv"]

[ext_resource type="Script" path="res://game_scene_hold.gd" id="1_m8xgh"]
[ext_resource type="FontFile" uid="uid://c10f45c7usqp7" path="res://WindyCity.ttf" id="1_oqswe"]
[ext_resource type="PackedScene" uid="uid://cs8o7rucwk4re" path="res://player.tscn" id="3_4rodd"]

[node name="GameSceneHold" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_m8xgh")

[node name="CenterContainer" type="CenterContainer" parent="."]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -20.0
offset_right = 20.0
offset_bottom = 40.0
grow_horizontal = 2

[node name="Label" type="Label" parent="CenterContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("1_oqswe")
text = "Game Scene Starts Here"

[node name="CenterContainer2" type="CenterContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -22.5
offset_top = -20.0
offset_right = 22.5
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2

[node name="BackButton" type="Button" parent="CenterContainer2"]
layout_mode = 2
theme_override_fonts/font = ExtResource("1_oqswe")
text = "Back"

[node name="Player" parent="." instance=ExtResource("3_4rodd")]

[node name="StartPosition" type="Marker2D" parent="."]

[connection signal="pressed" from="CenterContainer2/BackButton" to="." method="_on_back_button_pressed"]
